# demo-graphic

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFreeGLUT.cmake  FindGLEW.cmake  FindMinVR.cmake  FindPNG.cmake
config/: YURT_config.xml  desktop-freeglut.xml  desktop-glfw.xml  desktop-headtracked-freeglut.minvr
data/: LEGO_Man.mtl  LEGO_Man_smooth.mtl
doc/: demo-graphic.doxygen.in  graphics-programming-1.tex  graphics-programming-2.tex  graphics-programming-3.tex  graphics-programming-4.tex  graphics-programming.tex  scene-graph.fig
doc/images/: client-server.fig  display-graph.fig  scene-graph.latex
examples/: .nfs0000000001d058250000002b  CMakeLists.txt  README  demo.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demob.cpp  kbDemoMinVR.cpp  objDemoMinVR.cpp  pointDemo.cpp  selectDemo.cpp  selectDemoEdit.cpp  selectDemo_minVR.cpp  selection.cpp  textDemo.cpp  textDemoMinVR.cpp  textureDemo.cpp  textureDemoMinVR.cpp  treeDemo.cpp  treeDemo2.cpp
shaders/: fragSelectionShader.fp  selectionShader.vp  sh4-nog.fp  sh4-nog.vp  sh4.fp  sh4.gp  sh4.vp  sh5.fp  sh5.vp  shader.fp  shader.vp  textShader.fp  textShader.vp
src/: CMakeLists.txt  MVRDemo.h  README  bsg.cpp  bsg.h  bsgMenagerie.cpp  bsgMenagerie.h  bsgObjModel.cpp  bsgObjModel.h  demo.cpp  demo2.cpp  demo3.cpp  demo4.cpp  objDemoMinVR.cpp  shader.fp  shader.vp  shader2.vp  tex2.fp  textureDemo.cpp  textureDemoMinVR.cpp  textureShader.fp  textureShader.vp  treeDemo.cpp  treeDemo2.cpp
src/sys/: time.cpp  time.h  times.h
